Made a bunch of changes

--- a/index.html
+++ b/index.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sample Website Test</title>
+    <title>Learn Enough to be Dangerous</title>
 </head>
-<body>
-    <p><strong>TEstinh </strong> Hello World</p>
-    Aliqua aliqua <a href="http://www.google.com">Test anchor</a>est laboris culpa. Et enim laboris proident consequat adipisicing velit adipisicing proident eu ut dolore magna culpa. Cillum voluptate ea deserunt amet id commodo deserunt amet eiusmod. Ex magna in minim labore magna occaecat fugiat tempor quis officia elit. Cillum eu id duis Lorem eu Lorem sint deserunt excepteur. Et laborum sint do ad amet elit reprehenderit laborum laborum. Nulla proident aliquip tempor esse dolore nulla cillum reprehenderit velit labore officia et esse ut.
-</body>
-</html>
 
+<body>
+    <h1>The Learn Enough Story</h1>
+    <p>
+        Lorem ipsum, dolor sit amet  <em>consectetur <strong> Eligendi nulla, inventore consequatur, perspiciatis ad voluptas totam laudantium voluptatum </strong> necessitatibus ea sint esse quidem </em> tenetur? Autem nihil dignissimos doloremque laborum facere.Exercitation eu quis do pariatur ad culpa cupidatat ad excepteur pariatur. Commodo in in minim elit culpa laborum irure. Culpa consequat commodo id sit cillum veniam. Qui dolor nisi ullamco et occaecat labore ex esse sit velit. Do id ad do pariatur pariatur esse. Sunt ad exercitation minim esse Lorem Lorem tempor consectetur. Do qui ex ea incididunt id elit non cillum enim excepteur do. Nulla ullamco duis laborum tempor in fugiat minim exercitation <strong>culpa. Amet laborum ut aliquip sint dolore. Officia in laborum id reprehenderit deserunt enim occaecat nulla. Id mollit consequat labore qui Lorem in laboris incididunt </strong> voluptate et nisi quis magna. Labore nostrud nisi in occaecat aliquip. Et labore do quis velit. <a href="https://learnenough.com/email">Signup for our official email</a>  now.
+
+        <p>HTMl was created by Time Bernes Lee</p>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Sir_Tim_Berners-Lee_%28cropped%29.jpg" alt="Profile photo">
+    </p>
+    <h2>Background</h2>
+    <h2>Founders</h2>
+    <h3>Nish Faria</h3>
+    <h3>Jason Bourne</h3>
+    <h3>Adeeb Premji</h3>
+
+    <p><strong>TEstinh </strong> Hello World</p>
+    Aliqua aliqua <a href="http://www.google.com" target="_blank" rel="noopener">Test anchor</a>est laboris culpa. Et enim laboris proident consequat
+    adipisicing velit adipisicing proident eu ut dolore magna culpa. Cillum voluptate ea deserunt amet id commodo
+    deserunt amet eiusmod. Ex magna in minim labore magna occaecat fugiat tempor quis officia elit. Cillum eu id duis
+    Lorem eu Lorem sint deserunt excepteur. Et laborum sint do ad amet elit reprehenderit laborum laborum. Nulla
+    proident aliquip tempor esse dolore nulla cillum reprehenderit velit labore officia et esse ut.
+    <br><img src="images/kitten.jpg" alt="An adorable kitten">
+</body>
+
+</html>
