--- a/tags.html
+++ b/tags.html
@@ -90,7 +90,7 @@
         <td>
           <code>&lt;strong&gt;at least a billion people&lt;/strong&gt;</code>
         </td>
-        <td>FILL_IN</td>
+        <td><strong>at least a billion people</strong></td>
       </tr>
       <tr>
         <td><code>a</code></td>
@@ -101,7 +101,7 @@
             &lt;a href="https://learnenough.com/"&gt;Learn Enough&lt;/a&gt;
           </code>
         </td>
-        <td>FILL_IN</td>
+        <td><a href="https://learnenough.com/">Learn Enough</a></td>
       </tr>
       <tr>
         <td><code>img</code></td>
@@ -112,7 +112,7 @@
             &lt;img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl"&gt;
           </code>
         </td>
-        <td>FILL_IN</td>
+        <td><img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl"></td>
       </tr>
     </table>
 
