--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 
 <body>
+    <div>
+        <a href="index.html">Home</a>
+        <a href="moby_dick.html">Moby Dick</a>
+        <a href="tags.html">HTML Tags</a>
+      </div>
+  
     <h1>The Learn Enough Story</h1>
     <p>
         Lorem ipsum, dolor sit amet  <em>consectetur <strong> Eligendi nulla, inventore consequatur, perspiciatis ad voluptas totam laudantium voluptatum </strong> necessitatibus ea sint esse quidem </em> tenetur? Autem nihil dignissimos doloremque laborum facere.Exercitation eu quis do pariatur ad culpa cupidatat ad excepteur pariatur. Commodo in in minim elit culpa laborum irure. Culpa consequat commodo id sit cillum veniam. Qui dolor nisi ullamco et occaecat labore ex esse sit velit. Do id ad do pariatur pariatur esse. Sunt ad exercitation minim esse Lorem Lorem tempor consectetur. Do qui ex ea incididunt id elit non cillum enim excepteur do. Nulla ullamco duis laborum tempor in fugiat minim exercitation <strong>culpa. Amet laborum ut aliquip sint dolore. Officia in laborum id reprehenderit deserunt enim occaecat nulla. Id mollit consequat labore qui Lorem in laboris incididunt </strong> voluptate et nisi quis magna. Labore nostrud nisi in occaecat aliquip. Et labore do quis velit. <a href="https://learnenough.com/email">Signup for our official email</a>  now.
