--- a/moby_dick.html
+++ b/moby_dick.html
@@ -10,6 +10,12 @@
 </head>
 
 <body>
+    <div>
+        <a href="index.html">Home</a>
+        <a href="moby_dick.html">Moby Dick</a>
+        <a href="tags.html">HTML Tags</a>
+      </div>
+  
     <!-- much here to be styles, will do so in the last section -->
     <header>
         <h1>A Soft sover BOok</h1>
