--- a/tags.html
+++ b/tags.html
@@ -7,9 +7,17 @@
 </head>
 
 <body>
+  
   <header>
     <h1>Important HTML tags</h1>
   </header>
+  <div>
+    <a href="index.html">Home</a>
+    <a href="moby_dick.html">Moby Dick</a>
+    <a href="tags.html">HTML Tags</a>
+  </div>
+
+
   <a href="https://www.flickr.com/photos/jdhancock/3814523970"><img src="images/storm_trooper_tagged.jpg"
       alt="Tagged Storm Trooper"></a>
 
